@@ -2,9 +2,12 @@ b0.6.0
 -> added check metadata
   * created CheckMetadata class
   * added creator and getter metadata methods to TransactionEntry
-  X added check metadata to advanced transaction metadata tab
+  -> added check metadata to advanced transaction metadata tab
+    * integrated at a basic level
+    X integrated with transaction values
+    X option for incomplete added
   X added support for check metadata to DataHandler
-  X added metadata table gui for check metadata
+  X added CheckGui
 
 v0.5.1
 * rationalized alpha
